--- a/Install
+++ b/Install
@@ -1,1 +1,10 @@
 clear
+
+
+sleep 2
+echo -e "\e[36m[+] Installing packages\e[0m"
+pkg update -y
+termux-setup-storage
+termux-change-repo
+sleep 2
+echo -e "\e[36m[+] extracting files
