--- a/Install
+++ b/Install
@@ -24,5 +24,12 @@ echo -e "\e[36m[+] setting up android tools
 pkg install android-tools -y
 sleep 2
 echo -e "\e[36m[+] android tools succefully installed
+clear
+sleep 2
+
+echo -e "\e[36m[+] Installing Termux-am\e[0m"
+pkg install termux-am -y &>/dev/null
+echo -e "\e[32m[✓] Termux-am Installed Successfully\e[0m"
+echo -e "\n"
 
 
