--- a/Install
+++ b/Install
@@ -3,6 +3,8 @@ clear
 
 sleep 2
 echo -e "\e[36m[+] Installing packages\e[0m"
+pkg install git -y
+pkg install hashdeep -y
 pkg update -y
 termux-setup-storage
 termux-change-repo
