--- a/Install
+++ b/Install
@@ -60,9 +60,42 @@ echo -e "\e[36m[+] select one
 INSTALL_WOW64=0
 
 echo "Select an option"
-echo "1) Install boxvidra with box86 build (6 June)"
-echo "2) Install boxvidra with wow64 build (Complete version)"
+echo "1) Install boxvidra with box86 build (beta)"
+echo "2) Install boxvidra with wow64 build "
 echo ""
 echo -n "Selected number: "
 read i
+pkg install x11-repo
+1)
+    echo -e "\e[36m[+] Installing winelator Box86 build\e[0m"
+    wget -q --show-progress -O /data/data/com.termux/files/usr/glibc.box86.tar.xz https://github.com/AGENT404TRD/BOXVIDRA-EMULATOR/releases/download/Glibc/glibc.box86.tar.xz
+    sleep 2
+    echo -e "\e[33m[i] Extracting Box86 build glibc...\e[0m"
+    tar -xf /data/data/com.termux/files/usr/glibc.box86.tar.xz -C /data/data/com.termux/files/usr/
+    cp /data/data/com.termux/files/usr/glibc/opt/scripts/boxvidra /data/data/com.termux/files/usr/bin
+    cp /data/data/com.termux/files/usr/glibc/opt/scripts/vidra /data/data/com.termux/files/usr/bin
+    chmod +x /data/data/com.termux/files/usr/glibc/opt/scripts/*
+    chmod 777 /data/data/com.termux/files/usr/bin/boxvidra
+    chmod 777 /data/data/com.termux/files/usr/bin/boxvidra
+    rm /data/data/com.termux/files/usr/glibc.box86.tar.xz
+    echo -e "\n"
+    echo -e "\e[32m[✓] winelator Box86 build Installed Successfully.\e[0m"
+    ;;
+2)
+    echo -e "\e[36m[+] Installing winelator Wow64 build\e[0m"
+    wget -q --show-progress -O /data/data/com.termux/files/usr/glibc.wow64.tar.xz https://github.com/AGENT404TRD/BOXVIDRA-EMULATOR/releases/download/Glibc/glibc.wow64.tar.xz
+    sleep 2
+    echo -e "\e[33m[i] Extracting Wow64 build glibc...\e[0m"
+    tar -xf /data/data/com.termux/files/usr/glibc.wow64.tar.xz -C /data/data/com.termux/files/usr/
+    cp /data/data/com.termux/files/usr/glibc/opt/scripts/boxvidra /data/data/com.termux/files/usr/bin
+    chmod +x /data/data/com.termux/files/usr/glibc/opt/scripts/*
+    chmod 777 /data/data/com.termux/files/usr/bin/boxvidra
+    rm /data/data/com.termux/files/usr/glibc.wow64.tar.xz
+    echo -e "\n"
+    echo -e "\e[32m[✓] winelator Wow64 build Installed Successfully.\e[0m"
+    ;;
+*)
+    return 1
+    ;;
+esac
 
