--- a/Install
+++ b/Install
@@ -99,3 +99,22 @@ pkg install x11-repo
     ;;
 esac
 
+clear
+echo -e "\e[36m[+] Installing Xfce,and,Tools\e[0m"
+echo -e "\n"
+pkg install xfce4 -y
+apt install xfce4-whiskermenu-plugin -y
+apt install xfce4-screenshooter -y
+apt install xfce4-taskmanager -y
+apt install xfce4-docklike-plugin -y
+apt install matchbox-keyboard -y
+echo -e "\e[32m[✓] Xfce4,  Tools, Packages, Installed Successfully.\e[0m"
+echo -e "\n"
+sleep 3
+clear
+pkg install chrome -y
+
+
+
+
+
